--- a/api-gateway-docker.yml
+++ b/api-gateway-docker.yml
@@ -1,1 +1,39 @@
+server:
+  port: 8080
 
+spring:
+  application:
+    name: api-gateway
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    urls:
+      - name: Loan Service API
+        url: /ms-loan/v3/api-docs
+
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+      routes:
+        - id: ms-loan
+          uri: lb://ms-loan
+          predicates:
+            - Path=/ms-loan/**
+          filters:
+            - StripPrefix=1
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,info,*"
