--- a/discovery-server-docker.yml
+++ b/discovery-server-docker.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: discovery-server
+  config:
+    import: optional:configserver:http://config-server:8888
 
 eureka:
   client:
