--- a/discovery-server.yml
+++ b/discovery-server.yml
@@ -1,13 +1,19 @@
+server:
+  port: 8761
+
 spring:
   application:
     name: discovery-server
   config:
     import: optional:configserver:http://config-server:8888
 
-server:
-  port: 8761
-
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,info,*"
