--- a/api-gateway-docker.yml
+++ b/api-gateway-docker.yml
@@ -31,6 +31,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
 
 management:
   endpoints:
